Changed all "z-index" values to "1024", to prevent unexpected behavior with Bootstrap Wrapper Plugin (modal syntax) and User Menu

--- a/css/template.less
+++ b/css/template.less
@@ -218,7 +218,7 @@ ol ol ol ol ol { list-style-type: lower-roman; }  /* Roman (lowercase): i. ii. i
   position: fixed;
   right: -5px;
   padding-right: 3px;
-  z-index: 9999;
+  z-index: 1024;
   text-align: center;
 
   ul li a {
@@ -319,7 +319,7 @@ ol ol ol ol ol { list-style-type: lower-roman; }  /* Roman (lowercase): i. ii. i
 
 
 .dw-toc-affix {
-  z-index: 2048;
+  z-index: 1024;
   padding-left: 15px;
   right: 25px;
 }
@@ -427,7 +427,7 @@ ol ol ol ol ol { list-style-type: lower-roman; }  /* Roman (lowercase): i. ii. i
   right: 10px;
   opacity: .8;
   display: none;
-  z-index: 9999;
+  z-index: 1024;
 }
 
 
